Archive2/45/37b33595068f65/output
main.cpp: In function 'int main()':
main.cpp:5:25: error: no match for 'operator==' (operand types are 'Color' and 'Suit')
    bool eq = Color::Red == Suit::Hearts;
                         ^
main.cpp:5:25: note: candidates are:
main.cpp:5:25: note: operator==(Suit, Suit) <built-in>
main.cpp:5:25: note:   no known conversion for argument 1 from 'Color' to 'Suit'
main.cpp:5:25: note: operator==(Color, Color) <built-in>
main.cpp:5:25: note:   no known conversion for argument 2 from 'Suit' to 'Color'
main.cpp:5:9: warning: unused variable 'eq' [-Wunused-variable]
    bool eq = Color::Red == Suit::Hearts;
         ^
